fix z-index

--- a/css/carousels.css
+++ b/css/carousels.css
@@ -74,7 +74,7 @@
     height: 50px;
     border-radius: 50%;
     cursor: pointer;
-    z-index: 10;
+    z-index: 1;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -104,7 +104,7 @@
     display: flex;
     justify-content: center;
     gap: 10px;
-    z-index: 10;
+    z-index: 1;
 }
 
 .indicator {
